# eeg_GA

./: .gitignore  Cargo.toml  cpu_temps.sh  plot_temps.gp
src/: Test  \  board.rs  eos@100.126.49.61  geneticAlgorithm.rs  iteration_best.csv  main.rs
src/board/: eegHandler.rs
src/diffcomp/: .latter.txt.swp  diff1  diff2
src/oldIterations/: all_channels_best.csv  iteration_best_10_12hz.csv  iteration_best_12_16hz.csv  iteration_best_8_12hz.csv
src/savedIter/: iteration_12_16_hz.csv  iteration_16_20_hz.csv  iteration_20_24_hz.csv  iteration_24_28_hz.csv  iteration_28_32.csv  iteration_32_36_hz.csv  iteration_4_8_hz.csv  iteration_8_12_hz.csv
