[package]
name = "nqueensai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clustering = "0.2.1"
csv = "1.3.0"
fontconfig = "0.8.0"
gnuplot = "0.0.43"
lazy_static = "1.4.0"
#plotters = "0.3.5"
rand = "0.8.5"
rayon = "1.9.0"
shuffle = "0.1.7"
#yeslogic-fontconfig-sys = "5.0.0"

[profile.dev]
opt-level = 3
debug = false
#overflow-checks = false

[profile.release]
opt-level = 3
overflow-checks = false     # Disable integer overflow checks.
